src/main/java/com/example/linkingrest/error/exception/UserNotFoundException.java
package com.example.linkingrest.error.exception;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(){
        super();
    }

}
